@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.2.0 (unreleased)
 ------------------
 
+- tool interfaces: Replace non-existing IMember interface with the
+  correct IMemberData.
+
 - CatalogTool: If proxy roles are set on a script that uses the catalog
   and those proxy roles have been unset using the ZMI, which results
   in an empty tuple as proxy roles, then the catalog would not correctly
